# vision-tools

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build.sh  codecov.yaml  docker-compose.annotator.yaml  docker-compose.gpu.yaml  docker-compose.yaml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  setup.py  tune_gpu.sh
.circleci/: config.yml
.github/: mergeable.yml
app/: __init__.py  cmd.py  config.py  dataset.py  entities.py  eval.py  meters.py  pipeline.py  preprocess.py  submit.py  train.py  utils.py
coco_annotator/: mypy.ini  setup.py
cots_bench/: eveluate_yolox.py  mypy.ini  predict.py  setup.py  setup_data.sh  train_yolox.py
examples/: __init__.py  centernet.py  centernetv1.py  data.py  efficentdet.py
hwad_bench/: README.md  dodo.py  ignore_files.txt  mypy.ini  setup.py  setup_data.sh
kuzushiji_bench/: mypy.ini  pytest.ini  setup.py  train_yolox.py
object_detection/: __init__.py  agc.py  bifpn.py  box.py  centernet.py  dataset.py  effidet.py  losses.py  matcher.py  meters.py  mkmaps.py  model_loader.py  nfnet.py  point.py  transforms.py  utils.py
rbcd/: .gitignore  cli.py  dataset-metadata.json  dist.sh  memo.md  mypy.ini  pytest.ini  rbcd.py  requirements.txt  setup.py  test_rbcd.py  tests.py
subaru_bench/: mypy.ini  pytest.ini  setup.py
tanacho_bench/: .gitignore  cli.py  dist.sh  dodo.py  failed.txt  mypy.ini  pack.sh  predictor.py  requirements.txt  setup.py  tanacho_bench.py  tests.py  v3-0.center.yaml
tests/: test_agc.py  test_anchors.py  test_assign.py  test_atss.py  test_backbones.py  test_bipfn.py  test_bottlenecks.py  test_centernet.py  test_dataset.py  test_effidet.py  test_eval.py  test_image.py  test_losses.py  test_matcher.py  test_mkmaps.py  test_modules.py  test_nfnet.py  test_preprocess.py  test_submit.py  test_transformer.py  test_utils.py
tl_sandbox/: setup.py  (+1 more)
(+413 files in other folders)
