[tool.poetry]
name = "object-detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.6.0"
scipy = "^1.5.2"
tqdm = "^4.49.0"
torchvision = "^0.7.0"
efficientnet_pytorch = "^0.7.0"
matplotlib = "^3.3.2"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mypy = "^0.782"
pytest-cov = "^2.10.1"
pytest-benchmark = "^3.2.3"

[tool.black]
line-length = 70

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

