[tool.poetry]
name = "vnet"
include = ["vnet/py.typed"]
version = "0.1.5"
description = ""
authors = ["Xinyuan Yao <yao.ntno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.8.0"
tqdm = "^4.49.0"
torchvision = "^0.9.0"
efficientnet_pytorch = "^0.7.0"
matplotlib = "^3.3.2"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pytest-cov = "^2.10.1"
pytest-benchmark = "^3.2.3"
torch-optimizer = "^0.1.0"
torchnet = "^0.0.4"
mypy = "^0.800"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
